@@ -4,6 +4,9 @@
 
 == Release 1.8.7 ==
   * Attempt board shows referee decisions.
+  * Public Message button added to all consoles, including Results Console
+  * Results pane now correctly shows the selected group on first invocation and through URL fragment.
+  * Same fix corrects behavior of Team Points and Rankings buttons.
   
 == Release 1.8.6 ==
   * Changes made to plate loading information are propagated to all plate loading subwindows and to attempt board.
